syntax = "proto3";

package noble.globalfee.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/strangelove-ventures/noble/x/globalfee/types";

message Params {
  repeated cosmos.base.v1beta1.DecCoin minimum_gas_prices = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];

  repeated string bypass_min_fee_msg_types = 2;
}
